<resources>
    <string name="app_name">Android Engineer CodeCheck</string>
    <string name="search_input_text_hint">GitHub のリポジトリを検索できるよー</string>
    <string name="repo_written_language">Written in %s</string>
    <string name="repo_stars_cnt">%s stars</string>
    <string name="repo_watchers_cnt">%s watchers</string>
    <string name="repo_forks_cnt">%s forks</string>
    <string name="repo_title">%s</string>
    <string name="repo_open_issues_cnt">%s open issues</string>
</resources>